tests/paczka1/fuzzy1/57360255.err
Error in line 2: qGye S112 24,5
Error in line 1: pggsfy S112 89,7
Error in line 8: SEdVwZ S639 64,8
Error in line 14: pggsfy A267 18,5
Error in line 13: SEdVwZ A267 3,4
Error in line 26: eo7zIJ2Cq8 A452 -4,9
Error in line 21: SEdVwZ S112 96,6
Error in line 30: SEdVwZ S639 83,6
